test/files/neg/t6120.check
t6120.scala:5: warning: postfix operator bippy should be enabled
by making the implicit value scala.language.postfixOps visible.
This can be achieved by adding the import clause 'import scala.language.postfixOps'
or by setting the compiler option -language:postfixOps.
See the Scaladoc for value scala.language.postfixOps for a discussion
why the feature should be explicitly enabled.
  def f = null == null bippy
                       ^
t6120.scala:5: warning: method bippy in class BooleanOps is deprecated (since 2.11.0): bobo
  def f = null == null bippy
                       ^
t6120.scala:5: warning: comparing values of types Null and Null using `==' will always yield true
  def f = null == null bippy
               ^
t6120.scala:6: warning: method bippy in class BooleanOps is deprecated (since 2.11.0): bobo
  def g = true.bippy
               ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
